[gd_scene load_steps=7 format=3 uid="uid://cn8dwjohx1e3i"]

[ext_resource type="Script" path="res://scripts/tank_cheese_puff.gd" id="1_j4jtj"]
[ext_resource type="Texture2D" uid="uid://uaybfxgs6q77" path="res://assets/Sprite Pack 2/8 - Comrade Cheese Puff/Tank_Movement (32 x 32).png" id="1_pj4mc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ienxo"]
size = Vector2(27, 19)

[sub_resource type="Animation" id="Animation_m1m2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2n4s6"]
resource_name = "patrol"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ax55d"]
_data = {
"RESET": SubResource("Animation_m1m2d"),
"patrol": SubResource("Animation_2n4s6")
}

[node name="TankCheesePuff" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_j4jtj")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_pj4mc")
hframes = 12

[node name="missile_spawn_point" type="Marker2D" parent="sprite"]
unique_name_in_owner = true
position = Vector2(0, 6)

[node name="bomb_spawn_point" type="Marker2D" parent="sprite"]
unique_name_in_owner = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -9.5)
shape = SubResource("RectangleShape2D_ienxo")

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ax55d")
}
autoplay = "patrol"

[node name="anim_tree" type="AnimationTree" parent="."]

[node name="bomb_cooldown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="missile_cooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="wall_detector" type="RayCast2D" parent="."]
position = Vector2(0, -11)
target_position = Vector2(-16, 0)
collision_mask = 2

[connection signal="timeout" from="bomb_cooldown" to="." method="_on_bomb_cooldown_timeout"]
[connection signal="timeout" from="missile_cooldown" to="." method="_on_missile_cooldown_timeout"]
